add song end point to test het title
